base.css: fix word wrapping in error template

--- a/src/css/default/base.css
+++ b/src/css/default/base.css
@@ -379,6 +379,7 @@ input[type='submit'].LSview_search {
 	text-align: left;
 	background-color: #eee;
 	width: 80%;
+  white-space: pre-wrap;
 	margin: auto;
 	margin-top: 3em;
 	padding: 0.5em;
